@@ -469,15 +469,16 @@ that the \module{_locale} module is not accessible as a shared library.
 The locale module exposes the C library's gettext interface on systems
 that provide this interface.  It consists of the functions
 \function{gettext()}, \function{dgettext()}, \function{dcgettext()},
-\function{textdomain()}, and \function{bindtextdomain()}.  These are
-similar to the same functions in the \refmodule{gettext} module, but use
-the C library's binary format for message catalogs, and the C
-library's search algorithms for locating message catalogs. 
+\function{textdomain()}, \function{bindtextdomain()}, and
+\function{bind_textdomain_codeset()}.  These are similar to the same
+functions in the \refmodule{gettext} module, but use the C library's
+binary format for message catalogs, and the C library's search
+algorithms for locating message catalogs. 
 
 Python applications should normally find no need to invoke these
 functions, and should use \refmodule{gettext} instead.  A known
 exception to this rule are applications that link use additional C
 libraries which internally invoke \cfunction{gettext()} or
-\function{cdgettext()}.  For these applications, it may be necessary to
+\function{dcgettext()}.  For these applications, it may be necessary to
 bind the text domain, so that the libraries can properly locate their
 message catalogs.
